--- a/editor.html
+++ b/editor.html
@@ -47,6 +47,7 @@
       <script id="rendered-js" type="module">
 import "//hashsan.github.io/use/use.js"
 import {editorU} from "//hashsan.github.io/meme/meme.js?v=2"
+import "//hashsan.github.io/meme/meme.drop.js"  //v3        
 
 const file = fn.URL.get().file ||'editorU.txt'
 editorU(file)
