--- a/editor.html
+++ b/editor.html
@@ -28,6 +28,23 @@
   right:0.25rem;
   color:#333;
 }
+
+/**/  
+body{
+  overflow-y:scroll;
+}
+header{
+  margin-bottom:80vh;
+}
+.Bar {
+    position: fixed;
+    top: unset;
+    bottom: 0;
+}
+[contenteditable]::before {
+    position: fixed;
+}
+  
 </style>
 
   
