--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <body>
   <div class="pbox">
   <header><a href="index.html">index</a></header>
+  <div>新しくファイルを作る場合は、editor.html?file=new.txtとパラメータを加える。</div>
   <div class="wrap"></div>
   <footer class="r"><a href="#">goto^</a></footer>
 </div>
