--- a/editor.html
+++ b/editor.html
@@ -54,7 +54,11 @@ footer{
 
 <body>
   <div class="pbox">
-  <header><a href="index.html">index</a></header>
+  <header>
+    <a href="index.html">index</a>
+    <a href="https://hashsan.github.io/autoSummon/index.html" 
+      target="_blank">jidou_hikki</a>
+  </header>
   <div class="wrap" 
        contenteditable="plaintext-only"
        ></div>
